--- a/public/convert.html
+++ b/public/convert.html
@@ -10,6 +10,16 @@
             margin:0;
             padding:0;
         }
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --green_back:hsl(129, 67%, 52%);
+            }
+        }
+        @media (prefers-color-scheme: light) {
+            :root {
+                --green_back: hsl(135, 59%, 49%);
+            }
+        }
         body {
             margin-top: 0;
             font-family: Arial, sans-serif;
@@ -20,13 +30,14 @@
             height:auto;
             display: flex;
             flex-wrap: wrap;
-            border: 1px solid black;
+            /* border: 1px solid black; */
             /* background-color: white; */
         }
         div.acc {
             border-radius:26px;
             border:1px solid #F0F0F0;
             margin:20px;
+            background-color: white;
         }
         div.logo_w {
             width:100%;
@@ -84,10 +95,33 @@
             line-height:22px;
             color:#AAAAAA;
         }
+        div.button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100px;
+        }
+        button {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            padding: 16px 27px;
+            width: auto;
+            height: auto;
+            background: var(--green_back);
+            border-radius: 30px;
+            font-weight: bold;
+            font-size: 17px;
+            color: white;
+            cursor: pointer;
+            border: 0 none;
+            margin: 0 auto;
+            position: fixed;
+        }
     </style>
 </head>
 <body>
-    <button id="start">start</button>
+    <div class="button">
+        <button id="start">Скачать документ</button>
+    </div>
     <div class="acc__ready" style="page-break-before:always">
         <div class="show__result">
 
