--- a/public/convert.html
+++ b/public/convert.html
@@ -167,8 +167,8 @@
             const img =new Image();
             img.src=logo;
             img.onload = () => {
-                console.log('Width ', img.naturalWidth);
-                console.log('Height', img.naturalHeight);
+                // console.log('Width ', img.naturalWidth);
+                // console.log('Height', img.naturalHeight);
                 if(img.naturalWidth/img.naturalHeight>=3) {
                     logo_class = {
                         "div":"logo_w",
