--- a/public/convert.html
+++ b/public/convert.html
@@ -31,7 +31,9 @@
             display: flex;
             flex-wrap: wrap;
             /* border: 1px solid black; */
-            /* background-color: white; */
+            background-color: white;
+            margin: 0 auto 20px auto;
+            border-radius: 13px;
         }
         div.acc {
             border-radius:26px;
