--- a/public/service-app/badge-constructor/convert.html
+++ b/public/service-app/badge-constructor/convert.html
@@ -175,7 +175,7 @@
             </div>
         </div> -->
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <script nonce="EDNnf0233nceIOfn39afjuepcxb324ss23239h3sdfa" src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
     <script>
         let width = localStorage.getItem('width_acc'),height = localStorage.getItem('height_acc'),ss = localStorage.getItem('get_ss_acc'),ss_result_width,ss_result_height,orient = localStorage.getItem('orient_acc');
         switch(ss) {
