--- a/public/service-app/badge-constructor/convert.html
+++ b/public/service-app/badge-constructor/convert.html
@@ -175,8 +175,8 @@
             </div>
         </div> -->
     </div>
-    <script nonce="EDNnf0233nceIOfn39afjuepcxb324ss23239h3sdfa" src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
-    <script>
+    <script nonce="4piP7FKREnYA+S0CcxJe360Aph9zQN5AWr1xuxjSP+o=" src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <script nonce="4piP7FKREnYA+S0CcxJe360Aph9zQN5AWr1xuxjSP+o=">
         let width = localStorage.getItem('width_acc'),height = localStorage.getItem('height_acc'),ss = localStorage.getItem('get_ss_acc'),ss_result_width,ss_result_height,orient = localStorage.getItem('orient_acc');
         switch(ss) {
             case "sm":
